<resources>
    <string name="app_name">CleanApp</string>
    <string name="user_image">User Image</string>
    <string name="comments">%d comments</string>
    <string name="loading_comments">Loading comments</string>
    <string name="error_loading_comments">Error loading comments</string>
    <string name="loading_user">Loading user</string>
    <string name="error_loading_user">Error loading user</string>
    <string name="error_loading_post">Error loading post</string>
    <string name="error_loading_posts">Error loading posts</string>
    <string name="no_posts">There are no posts</string>
</resources>
