<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.ricamgar.citibox.posts.detail.PostDetailViewModel.LoadingType" />

        <variable
            name="viewmodel"
            type="com.ricamgar.citibox.posts.detail.PostDetailViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding"
            tools:context=".posts.detail.PostDetailActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImg"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:contentDescription="@string/user_image"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:avatarId="@{viewmodel.post.userId}"
                app:imageLoader="@{viewmodel.imageLoader}" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/profileImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profileImg"
                app:layout_constraintTop_toTopOf="@+id/profileImg">

                <TextView
                    android:id="@+id/nameTxt"
                    style="@style/nameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@{viewmodel.user.name}"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/usernameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.user.username}"
                    tools:text="Username" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="@{viewmodel.loading == LoadingType.USER? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/profileImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profileImg"
                app:layout_constraintTop_toTopOf="@+id/profileImg">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/loading_user" />

            </LinearLayout>

            <TextView
                style="@style/errorStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/error_loading_user"
                android:layout_marginStart="16dp"
                android:visibility="@{viewmodel.userError ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/profileImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profileImg"
                app:layout_constraintTop_toTopOf="@+id/profileImg" />

            <TextView
                android:id="@+id/bodyTxt"
                style="@style/bodyStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@{viewmodel.post.body}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImg"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

            <TextView
                android:id="@+id/numCommentsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{String.format(@string/comments, viewmodel.commentsNum)}"
                android:visibility="@{viewmodel.comments.isEmpty()? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bodyTxt"
                tools:text="10 comments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:overScrollMode="never"
                android:visibility="@{viewmodel.comments.isEmpty()? View.GONE : View.VISIBLE}"
                app:items="@{viewmodel.comments}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numCommentsTxt"
                tools:itemCount="10"
                tools:listitem="@layout/comment_item" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/screen_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/screen_padding"
                android:visibility="@{viewmodel.loading == LoadingType.COMMENTS? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numCommentsTxt">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/loading_comments" />

            </LinearLayout>

            <TextView
                style="@style/errorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_padding"
                android:text="@string/error_loading_comments"
                android:visibility="@{viewmodel.commentsError ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numCommentsTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>